osdc/modules/pypi-cache/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pypi-cache
  labels:
    osdc.io/module: pypi-cache
    app.kubernetes.io/name: pypi-cache
    app.kubernetes.io/component: package-cache
